# Micro-Game-Engine

./: AGENTS.md  CMakeLists.txt  Dependencies.cmake
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
Editor/: CMakeLists.txt
Editor/Source/: EditorApp.cpp  EditorApp.h  main.cpp
Editor/Source/Core/: Console.cpp  Console.h
Editor/Source/Core/SceneView/: SceneView.cpp  SceneView.h
Editor/Source/Core/View/: ConsoleView.cpp  ConsoleView.h  SceneLogView.cpp  SceneLogView.h  SceneView.cpp  SceneView.h
Editor/Source/SceneView/: SceneView.cpp  SceneView.h
Engine/: CMakeLists.txt  EngineConfig.h.template
Engine/Source/: EngineConfig.h  main.cpp  pch.h
Engine/Source/Core/: Engine.cpp  Engine.h  Log.cpp  Log.h  RenderContext.cpp  RenderContext.h  Types.h
Engine/Source/Game/: DefaultGame.cpp  DefaultGame.h  GameBase.cpp  GameBase.h
Engine/Source/Gameplay/: Component.h  GameObject.cpp  GameObject.h  GameObjectPool.h  GameObjectsPool.h  GraphicComponent.h  ImageComponent.h  MeshComponent.cpp  MeshComponent.h  SpriteComponent.cpp  SpriteComponent.h  StaticMeshComponent.h  TextComponent.cpp  TextComponent.h  Transform2DComponent.h  Transform2dComponent.cpp
Engine/Source/Gameplay/Components/: Component.cpp  Component.h  GraphicComponent.h  MeshComponent.cpp  MeshComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h  Transform2dComponent.cpp  Transform2dComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Source/Memory/: ArenaAllocator.h
Engine/Source/UI/Components/: ButtonComponent.cpp  ButtonComponent.h  ImageComponent.cpp  ImageComponent.h  LabelComponent.cpp  LabelComponent.h
